argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`argocd.va.local`)
      services:
        - name: argocd-server
          port: https
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.va.local`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: prometheus-server
      port: 80
